change the whole background colors

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     
     <!-- NEW: Motion Effects CSS (add after your main styles) -->
     <link rel="stylesheet" href="css/motion-effects.css">
+    <link rel="stylesheet" href="css/cloud-dancer-colors.css">
     
     <!-- Three.js CDN - REQUIRED for 3D effects -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
